--- a/deploy/cloudrun-service.yaml
+++ b/deploy/cloudrun-service.yaml
@@ -2,46 +2,70 @@ apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
   name: example-dotnet
+  labels:
+    cloud.googleapis.com/location: asia-northeast1
+  annotations:
+    run.googleapis.com/ingress: all
+    run.googleapis.com/invoker-iam-disabled: 'true'
 spec:
   template:
     metadata:
       annotations:
+        autoscaling.knative.dev/maxScale: '100'
         run.googleapis.com/container-dependencies: '{"app":["collector"]}'
     spec:
+      containerConcurrency: 80
+      timeoutSeconds: 300
       containers:
       - name: app
         image: __APP_IMAGE__
-        env:
-        - name: OTEL_EXPORTER_OTLP_ENDPOINT
-          value: "http://localhost:4317"
-        - name: OTEL_SERVICE_NAME
-          value: "example-dotnet"
         ports:
         - name: http1
           containerPort: 8080
-      - image: "us-docker.pkg.dev/cloud-ops-agents-artifacts/google-cloud-opentelemetry-collector/otelcol-google:0.131.0"
+        env:
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: http://localhost:4317
+        - name: OTEL_SERVICE_NAME
+          value: example-dotnet
+        resources:
+          limits:
+            memory: 512Mi
+            cpu: 1000m
+        startupProbe:
+          timeoutSeconds: 240
+          periodSeconds: 240
+          failureThreshold: 1
+          tcpSocket:
+            port: 8080
+      - name: collector
+        image: us-docker.pkg.dev/cloud-ops-agents-artifacts/google-cloud-opentelemetry-collector/otelcol-google:0.131.0
         args:
         - --config=/etc/otelcol-google/config.yaml
-        name: collector
-        startupProbe:
-          httpGet:
-            path: /
-            port: 13133
-          timeoutSeconds: 30
-          periodSeconds: 30
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 13133
-          timeoutSeconds: 30
-          periodSeconds: 30
+        resources:
+          limits:
+            memory: 256Mi
+            cpu: 1000m
         volumeMounts:
-        - mountPath: /etc/otelcol-google/
-          name: config
+        - name: config
+          mountPath: /etc/otelcol-google/
+        livenessProbe:
+          timeoutSeconds: 30
+          periodSeconds: 30
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 13133
+        startupProbe:
+          timeoutSeconds: 30
+          periodSeconds: 30
+          failureThreshold: 3
+          httpGet:
+            path: /
+            port: 13133
       volumes:
       - name: config
         secret:
+          secretName: otel-collector-config
           items:
           - key: latest
             path: config.yaml
-          secretName: 'otel-collector-config'
